@@ -1,14 +1,16 @@
 export(and, CleanProject,CrossCode,CrossTwo,ExportCoding,
-       FileCodedByAnd, FileCodedByOr,FileCodedByNot,
        CaseCodedByAnd, CaseCodedByOr,CaseCodedByNot,
+       FileCodedByAnd, FileCodedByOr,FileCodedByNot,
        gselect.list,GetAttr,GetCaseId,GetCaseName,
+       getFiles,
        GetCodingTable,GetFileId,GetFileIdSets,GetFileName,
        list.deleted,pdelete,QueryFile,relation,retrieval,RQDA,RQDAQuery,
        SearchFiles,ShowSubset,SummaryCoding,undelete,write.FileList)
-S3method(Ops,ID)
+S3method(Ops,RQDA.vector)
 S3method(print,SummaryCoding)
 S3method(ShowSubset,default)
 S3method(ShowSubset,CaseAttr)
+S3method(ShowSubset, caseName)
 S3method(ShowSubset,FileAttr)
 import(RGtk2)
 import(gWidgetsRGtk2)
