@@ -471,7 +471,7 @@ GetFileId <- function(condition=c("unconditional","case","filecategory","both"),
                 filecategory=FidOfCatFun(type=type),
                 both=bothFun(type=type)
                 )
-  class(fid) <- "ID"
+  class(fid) <- c("RQDA.vector","fileId")
   fid
 }
 
@@ -506,7 +506,7 @@ GetFileIdSets <- function(set=c("case","filecategory"),relation=c("union","inter
       }
     }
   } ## end of set=="filecategory"
-  class(ans) <- "ID"
+  class(ans) <- c("RQDA.vector","fileId")
   ans
 }
 
